insp/unreal/anope need the irctest repo to be built

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -32,6 +32,7 @@ jobs:
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/ergo
+    - uses: actions/checkout@v2
     - name: Checkout Ergo
       uses: actions/checkout@v2
       with:
@@ -52,6 +53,7 @@ jobs:
   build-inspircd:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Checkout InspIRCd
       uses: actions/checkout@v2
       with:
@@ -99,6 +101,7 @@ jobs:
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/solanum
+    - uses: actions/checkout@v2
     - name: Checkout Solanum
       uses: actions/checkout@v2
       with:
@@ -146,6 +149,7 @@ jobs:
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/unrealircd
+    - uses: actions/checkout@v2
     - name: Checkout UnrealIRCd
       uses: actions/checkout@v2
       with:
