--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -21,6 +21,7 @@ jobs:
   build-inspircd:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Checkout InspIRCd
       uses: actions/checkout@v2
       with:
