Use consistent python versions between build/install and run, needed for limnoria

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -33,6 +33,10 @@ jobs:
           ~/.cache
           $GITHUB_WORKSPACE/ergo
     - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
     - name: Checkout Ergo
       uses: actions/checkout@v2
       with:
@@ -54,6 +58,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
     - name: Checkout InspIRCd
       uses: actions/checkout@v2
       with:
@@ -102,6 +110,10 @@ jobs:
           ~/.cache
           $GITHUB_WORKSPACE/solanum
     - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
     - name: Checkout Solanum
       uses: actions/checkout@v2
       with:
@@ -150,6 +162,10 @@ jobs:
           ~/.cache
           $GITHUB_WORKSPACE/unrealircd
     - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
     - name: Checkout UnrealIRCd
       uses: actions/checkout@v2
       with:
