Also need to upload ~/go for Ergo

--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -43,7 +43,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-inspircd
-        path: ~/.local
+        path: |-
+          ~/.local
+          ~/go
         retention-days: 1
   publish-test-results:
     if: success() || failure()
