--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -50,7 +50,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-charybdis
-        path: ~/.local
+        path: |-
+          ~/.local
+          ~/go
         retention-days: 1
   build-ergo:
     runs-on: ubuntu-latest
@@ -86,7 +88,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-ergo
-        path: ~/.local
+        path: |-
+          ~/.local
+          ~/go
         retention-days: 1
   build-inspircd:
     runs-on: ubuntu-latest
@@ -113,7 +117,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-inspircd
-        path: ~/.local
+        path: |-
+          ~/.local
+          ~/go
         retention-days: 1
   build-limnoria:
     runs-on: ubuntu-latest
@@ -131,7 +137,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-limnoria
-        path: ~/.local
+        path: |-
+          ~/.local
+          ~/go
         retention-days: 1
   build-solanum:
     runs-on: ubuntu-latest
@@ -165,7 +173,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-solanum
-        path: ~/.local
+        path: |-
+          ~/.local
+          ~/go
         retention-days: 1
   build-sopel:
     runs-on: ubuntu-latest
@@ -183,7 +193,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-sopel
-        path: ~/.local
+        path: |-
+          ~/.local
+          ~/go
         retention-days: 1
   build-unrealircd:
     runs-on: ubuntu-latest
@@ -217,7 +229,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-unrealircd
-        path: ~/.local
+        path: |-
+          ~/.local
+          ~/go
         retention-days: 1
   publish-test-results:
     if: success() || failure()
