--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -5,6 +5,7 @@ jobs:
   build-anope:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Checkout Anope
       uses: actions/checkout@v2
       with:
