--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -76,6 +76,11 @@ jobs:
     - build-charybdis
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -85,6 +90,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-charybdis
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -105,6 +111,11 @@ jobs:
     - build-ergo
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -114,6 +125,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-ergo
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -134,6 +146,11 @@ jobs:
     - build-inspircd
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -143,6 +160,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-inspircd
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -164,6 +182,11 @@ jobs:
     - build-anope
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -173,10 +196,12 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-inspircd
+        path: '~'
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
         name: installed-anope
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -197,6 +222,11 @@ jobs:
     - build-limnoria
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -206,6 +236,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-limnoria
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -226,6 +257,11 @@ jobs:
     - build-solanum
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -235,6 +271,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-solanum
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -255,6 +292,11 @@ jobs:
     - build-sopel
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -264,6 +306,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-sopel
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -284,6 +327,11 @@ jobs:
     - build-unrealircd
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -293,6 +341,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-unrealircd
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -314,6 +363,11 @@ jobs:
     - build-anope
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -323,10 +377,12 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-unrealircd
+        path: '~'
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
         name: installed-anope
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
