--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -262,6 +262,11 @@ jobs:
     - build-charybdis
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -271,6 +276,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-charybdis
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -291,6 +297,11 @@ jobs:
     - build-ergo
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -300,6 +311,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-ergo
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -320,6 +332,11 @@ jobs:
     - build-inspircd
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -329,6 +346,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-inspircd
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -350,6 +368,11 @@ jobs:
     - build-anope
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -359,10 +382,12 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-inspircd
+        path: '~'
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
         name: installed-anope
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -383,6 +408,11 @@ jobs:
     - build-limnoria
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -392,6 +422,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-limnoria
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -412,6 +443,11 @@ jobs:
     - build-solanum
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -421,6 +457,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-solanum
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -441,6 +478,11 @@ jobs:
     - build-sopel
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -450,6 +492,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-sopel
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -470,6 +513,11 @@ jobs:
     - build-unrealircd
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -479,6 +527,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-unrealircd
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -500,6 +549,11 @@ jobs:
     - build-anope
     runs-on: ubuntu-latest
     steps:
+    - name: Install Atheme
+      run: |-
+        ls -la ~
+        ls -la ~/.local
+        ls -la ~/.local/bin
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -509,10 +563,12 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: installed-unrealircd
+        path: '~'
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
         name: installed-anope
+        path: '~'
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
